Bug 1461706 - Sync disabled state of number control regardless of appearance. r=jwatt, a=RyanVM

I noticed this bug while fixing bug 1478069, but it goes back way earlier.

Differential Revision: https://phabricator.services.mozilla.com/D3867

--HG--
extra : source : 3de16fbc247bc1ca28ec12a776e468630407ea9e
extra : amend_source : 006d54ce5aa513868046d9460958298d19f10c28