layout/forms/nsNumberControlFrame.cpp
@@ -415,6 +415,8 @@ nsNumberControlFrame::CreateAnonymousContent(nsTArray<ContentInfo>& aElements)
     nsContentUtils::AddScriptRunner(focusJob);
   }
 
+  SyncDisabledState(); // Sync disabled state of 'mTextField'.
+
   if (StyleDisplay()->mAppearance == NS_THEME_TEXTFIELD) {
     // The author has elected to hide the spinner by setting this
     // -moz-appearance. We will reframe if it changes.
@@ -442,8 +444,6 @@ nsNumberControlFrame::CreateAnonymousContent(nsTArray<ContentInfo>& aElements)
                             spinBoxCI.mChildren,
                             nsGkAtoms::div,
                             CSSPseudoElementType::mozNumberSpinDown);
-
-  SyncDisabledState();
 
   return rv;
 }
